# CherrryTracker.ninja

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  main.yml
esp32/: esp32.ino
esp32cam/: esp32cam-timelapse-microsd.ino  esp32cam.ino
esp32cam/v2/: camera_pins.h  v2.ino
src/esp32/: esp32.ino
v2/: avi_settings.h  camera_pins.h  settings.h  v2.ino
